[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph420_lab03"
version = "0.0.1"
authors = [
    { name="Sydney Pasloski", email="sydney.pasloski@ucalgary.ca" },
    { name="Declan Fitzpatrick", email="declan.fitzpatrick@ucalgary.ca" },
]
description="goph420 lab03 toml"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/DeclanFitzpatrick/goph420-w2025-lab03-stDFSP"